# Stone_AI

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  admin.py  alerts.py  app.py  brain.py  config.py  control.py  danh_sach_san_pham.csv  dashboard.html  database.rules.json  deploy-vps.sh  deploy.sh  docker-compose.yml  entrypoint.sh  fb.py  get_image.py  messenger.py  pyproject.toml  render.yaml  requirements.txt  stats.py  util.py
Document_ChatBot_Mess/: Danh_Muc_San_Pham.csv  Personal.md
app/: admin.py  config.py  context.py  dev_chat.py  evaluator.py  guardrails.py  http_client.py  llm.py  logging_setup.py  main.py  messenger.py  middleware.py  orchestrator.py  planner.py  prompt.py
app/db/: supabase.py
app/db/migrations/: 001_products.sql  002_conversations.sql  003_messages.sql  004_functions.sql  005_customers.sql  006_schema_v2.sql
app/tools/: definitions.py  escalate.py  lark_media.py  search.py  slot.py  update_customer.py
bot_tools/: README.md  find_by_price.py  lark_crm.py  lark_image.py
docs/: PERSONALITY.md
scripts/: check_dims.py  patch_dims.py
tests/: conftest.py  loadtest.py  test_escalate.py  test_main.py  test_messenger.py  test_middleware.py  test_search.py  test_utils.py
